add volume to tasks api

--- a/ressources/environnement.yml
+++ b/ressources/environnement.yml
@@ -5,3 +5,4 @@ metadata:
 data:
   TASKS_AUTH_ADDRESS: "tasks-api-service.default" 
   USERS_AUTH_ADRESS: "users-api-service.default"
+  TASKS_FOLDER: tasks
