--- a/ressources/environnement.yml
+++ b/ressources/environnement.yml
@@ -4,5 +4,5 @@ metadata:
   name: project-env
 data:
   TASKS_AUTH_ADDRESS: "tasks-api-service.default" 
-  USERS_AUTH_ADRESS: "users-api-service.default"
-  TASKS_FOLDER: tasks
+  USERS_AUTH_ADDRESS: "users-api-service.default"
+  TASKS_FOLDER: "tasks"
