--- a/ressources/users-api-deploy.yml
+++ b/ressources/users-api-deploy.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: users-api-deploy
 spec:
-  replicas: 5
+  replicas: 2
   selector:
     matchLabels:
       app: users-api
@@ -20,10 +20,10 @@ spec:
             valueFrom:
               configMapKeyRef:
                 name: project-env
-                key: USERS_AUTH_ADDRESS
+                key: AUTH_ADDRESS
         resources:
           limits:
             memory: "128Mi"
-            cpu: "500m"
+            cpu: "100m"
         ports:
         - containerPort: 8080
